# home_automation_rust

./: .gitignore  Cargo.toml  Rocket.toml  diesel.toml
migrations/2024-07-16-110014_create_sensor/: down.sql  up.sql
migrations/2024-07-16-113316_create_sensor_reading/: down.sql  up.sql
src/: main.rs
src/db/: mod.rs  models.rs  schema.rs
src/transport/: mod.rs
src/transport/api/: mod.rs  sensor_reading.rs
static/: charts.css
static/charts/: script.js
static/index/: style.css
templates/: charts.html.tera  index.html.tera
